There was an issue with the header nav for medium size viewports which caused the menu to wrap below the logo. This fix reduces nav link font size for these viewports to avoid wrapping.

--- a/sass/tji/_general.scss
+++ b/sass/tji/_general.scss
@@ -225,6 +225,11 @@ blockquote {
 	
 	a {
 		font-family: $headingFont;
+		font-size: $tji-font-size-xs;
+		
+		@media (min-width: $tji-break-point-md) {
+			font-size: $tji-font-size-sm;
+		}
 	}
 }
 
